add markup for package option checkbox

--- a/index.html
+++ b/index.html
@@ -300,9 +300,11 @@
                 <label for="company">Bedrijf</label><br>
                 <input type="text" name="bedrijf" id="company"><br>
 
-
                 <label for="phone-number">Telefonenummer</label><br>
                 <input type="number" name="phone-nummer" id="phone-number"><br>
+
+                <label for="buy-package-option">Een clinics deal kopen?</label>
+                <input type="checkbox" name="clinics-deal" id="buy-package-option">
 
                 <label for="message">Bericht</label><br>
                 <textarea name="bericht" id="message" cols="20" rows="10"></textarea><br>
