show and hide select option drop down when select package

--- a/index.html
+++ b/index.html
@@ -316,9 +316,10 @@
                         <label for="buy-package-option">Een clinics deal kopen?</label>
                         <input type="checkbox" name="clinics-deal" id="buy-package-option">
                     </div>
-                    <div class="select-option">
+                    <div class="select-option" id="select-option">
                         <label for="selected-package">kies optie</label>
                         <select name="geselecteerd pakket" id="selected-package" class="select-option-list">
+                            <option value="kies-optie" class="disabled-option" disabled>Kies Optie</option>
                             <option value="basis">Basis</option>
                             <option value="uitgebried">Uitgebried</option>
                             <option value="toernooi">Toernooi</option>
