move reference images inside a container

--- a/index.html
+++ b/index.html
@@ -279,12 +279,14 @@
         <!-- REFERENTIES -->
         <section id="referenties">
             <h2 class="section-heading">REFERENTIES</h2>
-            <figure class="ref-img"><img src="/images/references/ref-img-1.png"
-                    alt="spijkenisse snooker pool darts centrum logo"></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-2.jpg" alt="cafe frappant logo"></figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo">
-            </figure>
-            <figure class="ref-img"><img src="/images/references/ref-img-4.png" alt="coface logo"></figure>
+            <div class="ref-images-gallery">
+                <figure class="ref-img"><img src="/images/references/ref-img-1.png"
+                        alt="spijkenisse snooker pool darts centrum logo"></figure>
+                <figure class="ref-img"><img src="/images/references/ref-img-2.jpg" alt="cafe frappant logo"></figure>
+                <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt="tfc kickerheadz rotterdam logo">
+                </figure>
+                <figure class="ref-img"><img src="/images/references/ref-img-4.png" alt="coface logo"></figure>
+            </div>
         </section>
 
         <!-- CONTACT -->
