--- a/index.html
+++ b/index.html
@@ -293,30 +293,30 @@
         <section id="contact">
             <h2 class="section-heading">CONTACT</h2>
             <form action="https://formspree.io/xrgqyaqr" method="POST">
-                <div class="form-name-container">
+                <div class="form-name-container contact-form-field">
                     <label for="name">Naam<span class="form-required">*</span></label>
                     <input type="text" name="naam" id="name" required>
                 </div>
 
-                <div class="form-email-container">
+                <div class="form-email-container contact-form-field">
                     <label for="email">Email<span class="form-required">*</span></label>
                     <input type="text" name="e-mail" id="email" required>
                 </div>
 
-                <div class="form-company-container">
+                <div class="form-company-container contact-form-field">
                     <label for="company">Bedrijf</label>
                     <input type="text" name="bedrijf" id="company">
                 </div>
 
-                <div class="form-phone-container">
+                <div class="form-phone-container contact-form-field">
                     <label for="phone-number">Telefonenummer</label>
                     <input type="number" name="phone-nummer" id="phone-number">
                 </div>
 
-                <div class="form-buy-option-container">
+                <div class="form-buy-option-container contact-form-field">
                     <div class="buy-option">
-                        <label for="buy-package-option">Een clinics deal kopen?</label>
                         <input type="checkbox" name="clinics-deal" id="buy-package-option">
+                        <label for="buy-package-option">Een clinics deal kopen?</label>
                     </div>
                     <div class="select-option" id="select-option">
                         <label for="selected-package">kies optie</label>
@@ -331,7 +331,7 @@
                     </div>
                 </div>
 
-                <div class="form-message-container">
+                <div class="form-message-container contact-form-field">
                     <label for="message">Bericht</label>
                     <textarea name="bericht" id="message" cols="20" rows="10"></textarea>
                 </div>
