--- a/index.html
+++ b/index.html
@@ -330,13 +330,18 @@
                         </select>
                     </div>
                 </div>
-
+                
                 <div class="form-message-container contact-form-field">
                     <label for="message">Bericht</label>
                     <textarea name="bericht" id="message" cols="20" rows="10"></textarea>
                 </div>
+                
+                <div class="form-terms-container contact-form-field">
+                    <input type="checkbox" name="terms" id="terms">
+                    <label for="terms">Ik ga akkoord met alle algemene <a href="/voorwaarden.html" target="_blank">voorwaarden</a></label>
+                </div>
 
-                <input type="submit" value="VERSTUUR">
+                <input id="send-button" type="submit" value="VERSTUUR" disabled>
             </form>
             <hr class="contact-form-seperator">
             <div class="contact-info">
