--- a/voorwaarden.html
+++ b/voorwaarden.html
@@ -9,6 +9,7 @@
     <style>
         body {
             margin: 0 20%;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
