add terms and conditions link in footer

--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
         <div class="other-links">
             <a href="https://www.termsfeed.com/cookies-policy/b4102a3ea71484d6b028f03d40d8fa17" target="_blank">Cookies
                 Beled</a>
+            <a href="/voorwaarden.html" target="_blank">Voorwaarden</a>
         </div>
     </footer>
 
