Complete mobile website

--- a/voorwaarden.html
+++ b/voorwaarden.html
@@ -52,8 +52,7 @@
         gebruiken om uw opmerkingen te onderzoeken.</p>
 
     <h2> Gegevensopslag </h2>
-    <p>Alle gegevens verkregen door Tafelvoetbal Clinics worden bewaard en gebruikt in overeenstemming met de GDPR 2016.
-    </p>
+    <p>Alle gegevens verkregen door Tafelvoetbal Clinics worden bewaard en gebruikt in overeenstemming met de GDPR 2016.</p>
 </body>
 
 </html>
