add interview video to overmij section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                         ontmoeten voor
                         een superleuke en leerzame tafelvoetbalclinic.</p>
                 </div>
+                <div class="interview-video">
+                  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FsAsz54w2bg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </article>
         </section>
 
@@ -170,6 +173,7 @@
                 <!-- Toernooi Package -->
                 <div class="package-card package-3">
                     <div class="prices">
+                        <div class="text-vanaf" style="color:steelblue;"><strong>vanaf</strong></div>
                         <div class="package-price"><span class="euro-symbol">&euro;</span>500 </div>
                         <sub>dagdeel</sub>
                     </div>
